--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+llama-index = "^0.9.34"
+langchain = "^0.1.2"
 
 
 [build-system]
